home page layout

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,20 +1,24 @@
 ﻿<header>
     <div class="logo"></div>
-    <a href="#/">Home</a> | 
-    <a href="#/Search">Search</a> | 
-    <a href="#/Comparison">Compare</a>
 
-    				<div><a href="#"><img src="app/img/logo.png"></a></div>
-				<div>bbb</div>
-				<div>
-					<form method="get" action="#"> 
-						<input type="submit" value="חפש" />
-						<input type="text" class="search_input" name="s" id="s" placeholder="מה תרצו לשופס?" />
-					</form>
 
-				</div>
-				<div>ccc</div>
-				<div>ddd</div>
-				<div><a href="#"><img src="app/img/cart.png"></a></div>
+    <div>
+        <a href="#">
+            <img src="app/img/logo.png"></a>
+    </div>
+    <div>bbb</div>
+    <div>
+        <form method="get" action="#">
+            <input type="submit" value="חפש" />
+            <input type="text" class="search_input" name="s" id="s" placeholder="מה תרצו לשופס?" />
+        </form>
+
+    </div>
+    <div>ccc</div>
+    <div>ddd</div>
+    <div>
+        <a href="#">
+            <img src="app/img/cart.png"></a>
+    </div>
 </header>
 
