Categroies Menu (as controller)

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,7 +1,8 @@
-﻿<header>
+﻿<header style="display:none">
     <div class="logo">
         <a href="#">
-            <img src="app/img/logo.png"></a>
+            <img src="app/img/logo.png">
+        </a>
     </div>
     <div class="buffer"></div>
 
@@ -26,28 +27,17 @@
     <div class="buffer"></div>
     <div class="cart">
         <a href="#">
-            <img src="app/img/cart.png"></a>
+            <img src="app/img/cart.png">
+        </a>
     </div>
 </header>
 
-<div class="popover bottom">
+<!--<div class="popover bottom">
     <div class="arrow"></div>
-    <h3 class="popover-title"></h3>
-
-    <div class="popover-content">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-            <li><a href="#home" data-toggle="tab">קטגוריות</a></li>
-            <li><a href="#profile" data-toggle="tab">סינון</a></li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-            <div class="tab-pane active" id="Div1" ng-repeat="category in categories">
-                <p><i class="fa fa-caret-left"></i></p>
-                <p>{{category.title}}</p>
-                
-            </div>
-            <div class="tab-pane" id="Div2">bbb</div>
-        </div>
+    <div class="popover-title">
     </div>
-</div>
+    <div class="popover-content">
+        <!-- Nav tabs - ->
+        <!-- Tab panes - ->
+    </div>
+</div> -->
