--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/controllers/search.js"></script>
     <script src="app/js/controllers/comparison.js"></script>
+    <script src="app/js/directives/categories-menu/categories-menu.js"></script>
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
