--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
     <script src="app/js/wallashops.js"></script>
     <!-- Services -->
-
+    <script src="app/js/services/category-service.js"></script>
+    
     <!-- Filters -->
     <!-- Directives -->
     <script src="app/js/directives/app-header/app-header.js"></script>
@@ -78,6 +79,7 @@
     <script src="app/js/controllers/search.js"></script>
     <script src="app/js/controllers/comparison.js"></script>
     <script src="app/js/directives/categories-menu/categories-menu.js"></script>
+
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
