--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,4 +1,4 @@
-﻿<header style="display:none">
+﻿<header>
     <div class="logo">
         <a href="#">
             <img src="app/img/logo.png">
@@ -9,6 +9,15 @@
     <div class="category">
         <span><a href="#"><b>לפי קטגוריה</b></a></span>
         <i class="fa fa-caret-down"></i>
+    </div>
+
+    <div class="popover bottom ">
+        <div class="popover-title"></div>
+        <div class="popover-content">
+
+            <!-- Nav tabs -->
+            <!-- Tab panes -->
+        </div>
     </div>
 
     <div class="buffer"></div>
@@ -32,12 +41,4 @@
     </div>
 </header>
 
-<!--<div class="popover bottom">
-    <div class="arrow"></div>
-    <div class="popover-title">
-    </div>
-    <div class="popover-content">
-        <!-- Nav tabs - ->
-        <!-- Tab panes - ->
-    </div>
-</div> -->
+
