filtering menu, convert to directive

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -8,6 +8,7 @@
 
     <div class="category">
         <span><a href="#"><b>לפי קטגוריה</b></a></span>
+        <ws-categories-menu filters="filters" load="loadCategories()"></ws-categories-menu>
         <i class="fa fa-caret-down"></i>
     </div>
 
