--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -6,20 +6,7 @@
     </div>
     <div class="buffer"></div>
 
-    <div class="category">
-        <span><a href="#"><b>לפי קטגוריה</b></a></span>
-        <ws-categories-menu filters="filters" load="loadCategories()"></ws-categories-menu>
-        <i class="fa fa-caret-down"></i>
-    </div>
-
-    <div class="popover bottom ">
-        <div class="popover-title"></div>
-        <div class="popover-content">
-
-            <!-- Nav tabs -->
-            <!-- Tab panes -->
-        </div>
-    </div>
+    <ws-categories-menu-trigger></ws-categories-menu-trigger>
 
     <div class="buffer"></div>
     <div class="search">
@@ -41,5 +28,4 @@
         </a>
     </div>
 </header>
-
 
