--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body class="rtl" ng-controller="AppCtrl">
-
+    <div class="content-container">
     <app-header></app-header>
     
     <div class="content">
@@ -20,8 +20,7 @@
             <ng-view></ng-view>
         </div>
     </div>
- 
-
+ </div>
 
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
@@ -29,7 +28,9 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-touch.min.js"></script>
-
+    
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="lib/angular-strap/angular-strap.js"></script>
 
     <script src="lib/simple/simple.js"></script>
     <!-- Services -->
@@ -78,6 +79,9 @@
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/controllers/search.js"></script>
     <script src="app/js/controllers/comparison.js"></script>
+    <script src="app/js/directives/categories-menu/filter.js"></script>
+    <script src="app/js/directives/categories-menu/categories.js"></script>
+    <script src="app/js/directives/categories-menu/categories-menu-trigger.js"></script>
     <script src="app/js/directives/categories-menu/categories-menu.js"></script>
 
 
