--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,31 +1,46 @@
 ﻿<header>
-    <div class="logo">
-        <a href="#">
-            <img src="app/img/logo.png">
-        </a>
+    <div class="header-right-side">
+        <div class="logo">
+            <a href="#">
+                <img src="app/img/logo.png">
+            </a>
+            <div class="right-buffer"></div>
+        </div>
+
+        <div class="header-category">
+            <ws-categories-menu-trigger></ws-categories-menu-trigger>
+
+        </div>
+        <div class="right-buffer"></div>
     </div>
-    <div class="buffer"></div>
-
-    <ws-categories-menu-trigger></ws-categories-menu-trigger>
-
-    <div class="buffer"></div>
     <div class="search">
-        <form method="get" action="#">
-            <input class="search_input" type="text" name="s" id="s" placeholder="מה תרצו לשופס?" />
-            <input class="search_button" type="submit" value="חפש" />
-        </form>
+        <div class="search-inner">
+            <form method="get" action="#">
+                <div class="search-input">
+                    <input type="text" name="s" id="s" placeholder="מה תרצו לשופס?" />
+                </div>
+                <div class="search-button">
+                    <input type="submit" value="חפש" />
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="hello_user">
-        <span><a href="#">שלום קטי</a></span>
-        <i class="fa fa-caret-down"></i>
-    </div>
-    <div>
-    </div>
-    <div class="buffer"></div>
-    <div class="cart">
-        <a href="#">
-            <img src="app/img/cart.png">
-        </a>
+
+    <div class="header-left-side">
+        <div class="hello_user">
+            <span><a href="#">שלום קטי</a></span>
+            <i class="fa fa-caret-down"></i>
+            <div class="left-buffer"></div>
+        </div>
+        <div>
+        </div>
+
+        <div class="cart">
+
+            <a href="#">
+                <img src="app/img/cart.png">
+            </a>
+        </div>
     </div>
 </header>
 
