minor ui changes

--- a/app/js/directives/products-list/products-list.html
+++ b/app/js/directives/products-list/products-list.html
@@ -1,4 +1,4 @@
-﻿<h4>{{category.name}}</h4>
+﻿<h4 class="products-list-name">{{category.name}}</h4>
 <products-list-items products="category.products" ></products-list-items>
 <products-list-navigation></products-list-navigation>
 
