--- a/app/js/directives/products-list-navigation/products-list-navigation.html
+++ b/app/js/directives/products-list-navigation/products-list-navigation.html
@@ -1,7 +1,9 @@
-﻿    <div class="navigationPoints">
+﻿<div>
+    <div class="navigationPoints">
         <div class="point"></div>
         <div class="selectedPoint"></div>
     </div>
-    <div class="left-arrow" ><i class="fa fa-caret-left" ng-click="canNavigateNext()? navigateNext():null"></i></div>
-    <div class="right-arrow" ><i class="fa fa-caret-right" ng-click="canNavigateBack()?navigateBack():null"></i></div>
+    <div class="left-arrow"><i class="fa fa-caret-left" ng-click="navigateNext()"></i></div>
+    <div class="right-arrow"><i class="fa fa-caret-right" ng-click="navigateBack()"></i></div>
 
+</div>
