completed home page

--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -12,9 +12,11 @@
         <p class="subtitle">{{ product.subtitle}}</p>
         <p class="rating">{{ product.rating}}</p>
         <p class="price">{{ product.price}}</p>
-        <form method="get" action="#">
-            <input class="details_button" type="submit" value="לפרטים >" />
-        </form>
+        
+        <b class="details"> לפרטים 
+            <i class="fa fa-chevron-left"></i>
+        </b>
+        
 
     </div>
 
