search page navigation

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -9,7 +9,7 @@
 
         <div class="header-category">
             <ws-categories-menu-trigger></ws-categories-menu-trigger>
-
+            
         </div>
         <div class="right-buffer"></div>
     </div>
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div class="header-left-side">
+   <!-- <div class="header-left-side">
         <div class="hello_user">
             <span><a href="#">שלום קטי</a></span>
             <i class="fa fa-caret-down"></i>
@@ -41,6 +41,6 @@
                 <img src="app/img/cart.png">
             </a>
         </div>
-    </div>
+    </div>-->
 </header>
 
