--- a/app/js/directives/categories-menu/categories-menu-trigger.html
+++ b/app/js/directives/categories-menu/categories-menu-trigger.html
@@ -4,6 +4,7 @@
 </script>
 <button class="category" bs-popover="'categories-menu.html'" data-trigger="manual" ng-click="showPopover()" data-placement="bottom">
     <b>לפי קטגוריה</b>
+    <i class="fa fa-filter"></i>
     <i class="fa fa-caret-down"></i>
 </button>
 </div>
