--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -1,10 +1,10 @@
-﻿<div class="categories-menu-container">
+﻿<div>
     <ul class="nav nav-tabs" >
         <li class="active">
             <a href="#categories" data-toggle="tab">קטגוריות</a>
         </li>
-        <li class="filter">
-            <a class="filtering" href="#filter" data-toggle="tab">סינון</a>
+        <li>
+            <a href="#filter" data-toggle="tab">סינון</a>
         </li>
     </ul>
 
