--- a/app/js/directives/categories-menu/filter.html
+++ b/app/js/directives/categories-menu/filter.html
@@ -1,42 +1,39 @@
-﻿    <div ng-class="{'somethingSelected': isAnyFilterSelected()}">
-        <ul class="filters-menu">
+﻿<div ng-class="{'somethingSelected': isAnyFilterSelected()}">
+    <ul class="filters-menu">
 
-            <li class="category-container" ng-click="clearSelectedFilterValues()">
-                <div class="clear-filter">נקה סינון</div>
-                <div class="category-name">שם הקטגוריה</div>
-            </li>
+        <li class="category-container">
+            <div class="clear-filter" ng-click="clearSelectedFilterValues()">נקה סינון</div>
+            <div class="category-name" ng-click="clearSelectedFilter()">שם הקטגוריה</div>
+        </li>
 
-            <li ng-repeat="filter in filters|limitTo: 4" ng-click="selectFilter(filter);">
+        <li ng-repeat="filter in filters|limitTo: 4" ng-click="selectFilter(filter);">
 
-                <div class="category-container" ng-class="{'selected': isFilterSelected(filter) }">
-                    <div class="category-dot">
-                        <i class="fa fa-circle"></i>
-                    </div>
-                    <div class="category-name">
-                        {{filter.title}}
-                    </div>
-
-                    <div class="category-arrow" ng-if="filter.values.length">
-                        <i class="fa" ng-class="{ 'fa-caret-left': !isFilterSelected(filter), 'fa-caret-down': isFilterSelected(filter)}"></i>
-                    </div>
+            <div class="category-container" ng-class="{'selected': isFilterSelected(filter) }">
+                <div class="category-dot">
+                    <i class="fa fa-circle"></i>
+                </div>
+                <div class="category-name">
+                    {{filter.title}}
                 </div>
 
-                <ul ng-show="filter.values.length && isFilterSelected(filter)">
-                    <li class="level1" ng-repeat="filterValue in filter.values" ng-click="selectFilterValue(filter, filterValue)">
-                        <div class="filter-container" ng-class="{'selected': isFilterValueSelected(filter, filterValue) }">
+                <div class="category-arrow" ng-if="filter.values.length">
+                    <i class="fa" ng-class="{ 'fa-caret-left': !isFilterSelected(filter), 'fa-caret-down': isFilterSelected(filter)}"></i>
+                </div>
+            </div>
 
-                            <div class="filter-check">
-                                <i class="fa fa-check"></i>
-                            </div>
-                            <div class="category-name">
-                                {{filterValue.title}}
-                            </div>
+            <ul ng-show="filter.values.length && isFilterSelected(filter)">
+                <li class="level1" ng-repeat="filterValue in filter.values" ng-click="selectFilterValue(filter, filterValue)">
+                    <div class="filter-container" ng-class="{'selected': isFilterValueSelected(filter, filterValue) }">
 
+                        <div class="filter-check">
+                            <i class="fa fa-check"></i>
                         </div>
-
-
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+                        <div class="category-name">
+                            {{filterValue.title}}
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</div>
