--- a/app/js/directives/products-list-navigation/products-list-navigation.html
+++ b/app/js/directives/products-list-navigation/products-list-navigation.html
@@ -1,5 +1,5 @@
 ﻿    <div >
-    <div class="navigationPoints" >
+    <div class="navigation-points" >
         <div class="point" ng-repeat="point in points" ng-class="{'selectedPoint': point.selected }" ></div>
     </div>
     
