Product Box Design

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -49,7 +49,7 @@
         <div class="call-center">
             <div class="left-buffer"></div>
             <div>מרכז הזמנות</div>
-            <a class="phone-number" href="tel:099608020">09-9608020</a>
+            <div class="phone-number">09-9608020</div>
         </div>
 
     </div>
