--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -1,9 +1,9 @@
-﻿<div>
+﻿<div class="menu">
     <ul class="nav nav-tabs" >
         <li ng-class="{'active': !hasFilter}">
             <a href="#categories" data-toggle="tab">קטגוריות</a>
         </li>
-        <li ng-class="{'active': hasFilter}">
+        <li class="filter-tab" ng-class="{'active': hasFilter}">
             <a href="#filter" data-toggle="tab">סינון</a>
         </li>
     </ul>
