--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <script src="app/js/wallashops.js"></script>
     <!-- Services -->
     <script src="app/js/services/category-service.js"></script>
+    <script src="app/js/services/promotions-service.js"></script>
 
     <!-- Filters -->
     <!-- Directives -->
