--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
+    <script>
+        document.addEventListener("deviceready", function() {
 
+            var ref = window.open("http://google.com", "_blank");
+            //ref.addEventListener("loadstop", function () {
+            //    navigator.notification.alert("LOAD STOP!");
+            //});
+            ref.addEventListener("loadstart", function () {
+                //navigator.notification.alert("LOAD Start!");
+                ref.executeScript({
+                    code: "alert(document.getElementsByTagName('input').length);"
+                });
+            });
+            //ref.addEventListener("exit", function () {
+            //    navigator.notification.alert("BYE!");
+            //});
+        }, false);
+    </script>
 </body>
 </html>
