--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
-    <script>
+    <!--<script>
         document.addEventListener("deviceready", function() {
 
             var ref = window.open("http://billme.azurewebsites.net/api/values", "_blank", "location=no");
@@ -110,6 +110,6 @@
             //    navigator.notification.alert("BYE!");
             //});
         }, false);
-    </script>
+    </script>-->
 </body>
 </html>
