--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -1,6 +1,6 @@
 ﻿<div class="menu">
     <ul class="nav nav-tabs" >
-        <li ng-class="{'active': !hasFilter}">
+        <li class="category-tab" ng-class="{'active': !hasFilter}">
             <a href="#categories" data-toggle="tab">קטגוריות</a>
         </li>
         <li class="filter-tab" ng-class="{'active': hasFilter}">
