--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <!-- Services -->
     <script src="app/js/services/category-service.js"></script>
     <script src="app/js/services/promotions-service.js"></script>
+    <script src="app/js/services/daily-cache-service.js"></script>
+    <script src="app/js/services/walla-shops-api.js"></script>
+
 
     <!-- Filters -->
     <!-- Directives -->
@@ -87,6 +90,7 @@
     <script src="app/js/directives/categories-menu/categories.js"></script>
     <script src="app/js/directives/categories-menu/categories-menu-trigger.js"></script>
     <script src="app/js/directives/categories-menu/categories-menu.js"></script>
+   
 
 
     <script src="app/js/app.js"></script>
