--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <!-- Services -->
     <script src="app/js/services/category-service.js"></script>
     <script src="app/js/services/promotions-service.js"></script>
+    <script src="app/js/services/product-service.js"></script>
     <script src="app/js/services/daily-cache-service.js"></script>
     <script src="app/js/services/walla-shops-api.js"></script>
 
