--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
 
+    <script src="app/js/services/data.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
 
