--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Walla! שופס</title>
+    <meta name="base-url" content="http://dev.wallashops.co.il"/>
+    <meta name="version" content="1.0.0"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -69,6 +71,7 @@
 
     <script src="app/js/wallashops.js"></script>
     <!-- Services -->
+    <script src="app/js/services/config.js"></script>
     <script src="app/js/services/category-service.js"></script>
     <script src="app/js/services/promotions-service.js"></script>
     <script src="app/js/services/product-service.js"></script>
