--- a/app/js/directives/categories-menu/categories-menu-trigger.html
+++ b/app/js/directives/categories-menu/categories-menu-trigger.html
@@ -2,11 +2,11 @@
     <script type="text/ng-template" id="categories-menu.html">
         <ws-categories-menu load-categories="loadCategories()" load-filters="loadFilters()" selected-category="currentCategory"></ws-categories-menu>
     </script>
-    <div ng-class="{'filtered':isFiltered()}">
-        <button class="category" bs-popover="'categories-menu.html'" data-trigger="manual" ng-click="showPopover()" data-placement="bottom" >
+    <div ng-class="{'menu-is-open':isMenuOpen}">
+        <button class="category" bs-popover="'categories-menu.html'" data-trigger="manual" data-placement="bottom" >
             <b>לפי קטגוריה</b>
-            <i class="fa fa-filter" ng-show="isFiltered()"></i>
-            <i class="fa fa-caret-down" ng-show="!isFiltered()"></i>
+            <i class="fa fa-filter" ng-show="isFiltered"></i>
+            <i class="fa fa-caret-down" ng-show="!isFiltered"></i>
         </button>
     </div>
 </div>
