selected category path and filters

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <script src="app/js/services/product-service.js"></script>
     <script src="app/js/services/daily-cache-service.js"></script>
     <script src="app/js/services/walla-shops-api.js"></script>
+    
+    
 
 
     <!-- Filters -->
@@ -100,6 +102,7 @@
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
+    <script src="app/js/resources.js"></script>
     <!--<script>
         document.addEventListener("deviceready", function() {
 
