--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -15,13 +15,12 @@
     </div>
     <div class="search">
         <div class="search-inner">
-            <form method="get" ng-submit="searchText()">
+            <form ng-submit="searchText()">
                 <div class="search-input">
-                    <input type="text" name="s" id="s" placeholder="מה תרצו לשופס?" ng-model="searchTerm" />
+                    <input type="text" placeholder="מה תרצו לשופס?" ng-model="searchTerm" />
                 </div>
-                <div >
                     <input type="submit" class="search-button" value="חפש" />
-                </div>
+               
             </form>
         </div>
     </div>
