filters header design + Category Menu Design

--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -1,9 +1,10 @@
 ﻿<div class="menu">
     <ul class="nav nav-tabs" >
-        <li class="category-tab" ng-class="{'active': !hasFilter}">
+        <li class="category-tab active" >
             <a href="#categories" data-toggle="tab">קטגוריות</a>
         </li>
-        <li class="filter-tab" ng-class="{'active': hasFilter}">
+
+        <li class="filter-tab" ng-class="{'disable': !hasFilter}" >
             <a href="#filter" data-toggle="tab">סינון</a>
         </li>
     </ul>
