--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -1,4 +1,6 @@
-﻿<div class="menu">
+﻿
+<div class="menu">
+    
     <ul class="nav nav-tabs" >
         <li class="category-tab active" >
             <a href="#categories" data-toggle="tab">קטגוריות</a>
