--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="app/js/services/data.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
+    <script src="lib/moment/moment.min.js"></script>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
