reload filters on menu

--- a/app/js/directives/categories-menu/categories-menu.html
+++ b/app/js/directives/categories-menu/categories-menu.html
@@ -16,7 +16,7 @@
             <ws-categories load="loadCategories()" selected-category="selectedCategory"></ws-categories>
         </div>
         <div class="tab-pane" id="filter">
-            <ws-filter load="loadFilters()"></ws-filter>
+            <ws-filter load="loadFilters()" selected-category="selectedCategory" has-filter="hasFilter"></ws-filter>
         </div>
     </div>
 </div>
