--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="app/js/services/product-service.js"></script>
     <script src="app/js/services/daily-cache-service.js"></script>
     <script src="app/js/services/walla-shops-api.js"></script>
+    <script src="app/js/services/product-details-presenter.js"></script>
     
     
 
