--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -1,7 +1,9 @@
 ﻿<div class="product-border">
-    <div class="remove-product" ng-show="isCompared" ng-click="publishRemoveProduct()"><div class="x">X</div></div>
+    <div class="remove-product" ng-show="isCompared" ng-click="publishRemoveProduct()">
+        <div class="x">X</div>
+    </div>
     <div class="product-info">
-        
+
         <div class="comparison" ng-show="selectionMode"></div>
         <div class="check-box" ng-show="selectionMode" ng-click="check($event)" ng-class="{'checked': checked }"></div>
 
@@ -9,24 +11,26 @@
         <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.imageUrl }}" />
         <div class="icons" ng-show="!isCompared">
             <div class="iconImg" ng-repeat="icon in product.icons">
-                <img ng-src="{{ icon.url }}" />
+                <img ng-src="{{ product.icons }}" />
             </div>
         </div>
 
         <p class="title" ng-class="{'compared': isCompared}"><b>{{ product.title }}</b></p>
 
-        <p class="subtitle" ng-class="{'compared': isCompared}">{{ product.subtitle}}</p>
+        <p class="subtitle" ng-class="{'compared': isCompared}">{{ product.subTitle }}</p>
 
-        <p>{{ product.subtitle2}}</p>
 
-        <div class="rating" >
+
+        <div class="rating" ng-show="product.ratersNumber > 0" ng-class="{'compared': isCompared}">
             <div class="raters-number" ng-show="!isCompared">({{product.ratersNumber}})</div>
             <div class="stars" ng-class="{'compared': isCompared}">
                 <i class="fa" ng-repeat="star in stars" ng-class="{'fa-star': $index<product.rating, 'fa-star-o':$index>=product.rating, 'fa-star-half-o' : $index==asInt(product.rating) && isDecimal(product.rating) }"></i>
             </div>
         </div>
 
-        <p class="price" ng-class="{'compared': isCompared}"><b>{{ product.price}}</b></p>
+        <p ng-show="!isCompared && product.ratersNumber == 0" > מספר תשלומים: {{ product.paymentsNum}}</p>
+
+        <p class="price" ng-class="{'compared': isCompared}"><b>{{ product.price}} ש"ח</b></p>
 
         <span class="details-text" ng-show="!isCompared">{{ product.details}}</span>
         <p class="details" ng-show="!isCompared"></p>
