--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Walla! שופס</title>
-    <meta name="base-url" content="http://www.wallashops.co.il"/>
+    <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
+    <meta name="base-url" content="http://dev.wallashops.co.il"/>
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="version" content="1.0.0"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,7 +16,6 @@
 
 </head>
 <body class="rtl" ng-controller="AppCtrl">
-
     <div class="content-container" >
         <app-header></app-header>
 
@@ -28,7 +28,7 @@
 
 
 
- 
+    <script src="lib/analytics/ga_local.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
     <script src="lib/moment/moment.min.js"></script>
@@ -60,6 +60,8 @@
     <script src="lib/simple/services/network-service.js"></script>
     <script src="lib/simple/services/network-manager.js"></script>
     <script src="lib/simple/services/configuration.js"></script>
+    <script src="lib/simple/services/alert-service.js"></script>
+    <script src="lib/simple/services/analytics-service.js"></script>
     <!-- Filters -->
     <script src="lib/simple/filters/localize.js"></script>
     <script src="lib/simple/filters/skip.js"></script>
