--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,5 +1,7 @@
 ﻿<header>
+    
     <div class="header-right-side">
+        <div class="header-back-arrow" ng-click="goBack()"><i class="fa fa-chevron-right"></i></div>
         <div class="logo">
             <a href="#">
                 <img src="app/img/logo.png">
