--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="base-url" content="http://dev.wallashops.co.il"/>
+    <meta name="base-url" content="http://www.wallashops.co.il"/>
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="version" content="1.1.0"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
