--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -56,7 +56,7 @@
         <div class="call-center">
             <div class="left-buffer"></div>
             <div>מרכז הזמנות</div>
-            <div class="phone-number">09-9608020</div>
+            <a class="phone-number" href="#">09-9608020</a>
         </div>
 
     </div>
