--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Walla! שופס</title>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
     <meta name="base-url" content="http://dev.wallashops.co.il"/>
     <meta name="ws-url" content="http://www.wallashops.co.il">
